# mingling-template

./: .gitignore  Cargo.toml  build.rs  cargo-generate.toml
src/: main.rs  renderers.rs
src/commands/: greet.rs
src/helps/: greet.rs
src/renderers/: greet_someone.rs
