[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
description = "{{project-description}}"
authors = ["{{author-name}} <{{author-email}}>"]

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"
lto = false

[profile.release]
opt-level = 3
# If you need to use exec_panic hook, enable `unwind`
# panic = "unwind"
panic = "abort"
lto = true

[dependencies.mingling]
version = "0.1.8"
features = ["parser", "comp"]

[build-dependencies.mingling]
version = "0.1.8"
features = ["builds", "comp"]

[dependencies]
